[package]
name = "led-matrix-countdown"
version = "0.1.2"
authors = ["EdJoPaTo <git-commit-with-a-funny-long-email-address-everyone-hates-as-it-is-too-long@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"

[dependencies.clap]
version = "2.33"
features = ["wrap_help"]

[dependencies.reqwest]
version = "0.10"
features = ["blocking"]

[dependencies.paho-mqtt]
version = "0.7"
default-features = false
# Add "ssl" to the features if you need ssl support
features = ["bundled", "build_bindgen"]
